# project-amazon-review-classifier-nlp-ai

./: .gitignore  AGENT_TASK_BOARD.md  PROJECT_PLAN.md  README.md  TODO.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_model_manager.py
backend/app/: logging_config.py  main.py  model_manager.py  models.yaml  openai_client.py  schemas.py  security.py
frontend/: .dockerignore  Dockerfile  Home.py  credits.json  pyproject.toml
frontend/logic/: model_manager.py  openai_client.py  research.py  schemas.py  styles.py
frontend/pages/: 1_Sentiment_Classifier.py  2_Category_Classifier.py  3_Blog_Post.py  3_Research_Post.py  4_Credits.py
